# Memoire-code

./: .gitignore  CI_MMMI.csv  CMakeLists.txt  README.md  best_feasible_point.txt  generate_CI.py  main.cpp  mcmc_submit_classe_1.sh  mcmc_submit_classe_2.sh  mcmc_submit_classe_4.sh  mcmc_submit_classe_8.sh  nomad_submit_classe_1.sh  nomad_submit_classe_2.sh  nomad_submit_classe_4.sh  nomad_submit_classe_8.sh
config/: CMakeLists.txt  config.cpp  config.hpp  setup.hpp
data/: day_hosp_csv_all.ods  death_day_all.ods  integration.csv  remove_script_with_sero.sh  remove_script_without_sero.sh
data/Conditions_initiales/: Classe_1_CI.csv  Classe_2_CI.csv  Classe_4_CI.csv  Classe_8_CI.csv
data/DATA_calibration/Classe_1/: Social_contact_matrix.csv  death.csv  hosp.csv
data/DATA_calibration/Classe_2/: Social_contact_matrix.csv  death.csv  hosp.csv
data/DATA_calibration/Classe_4/: Social_contact_matrix.csv  death.csv  hosp.csv
data/DATA_calibration/Classe_8/: Social_contact_matrix.csv  death.csv  hosp.csv
data/DATA_calibration/OLD/: day_data.csv  day_data_csv.csv  day_death_csv_0-65_65-inf.csv  day_hosp_csv_0-65_65-inf.csv  death_month_age.csv  hosp_day.csv  hosp_week.csv  hosp_week_age.csv  hosp_week_age2.csv  hosp_week_csv.csv  social_contact_analysis.RData  social_contact_matrix.csv  social_contact_matrix_2.csv
data/save_dir/: save_SIRQD_Classe_1.csv  save_SIRQD_Classe_2.csv  save_SIRQD_Classe_4.csv  save_SIRQD_Classe_8.csv
headers/: CMakeLists.txt  Data.hpp  MCMC.hpp  Nomad_file.hpp  Parametres.hpp  Stats.hpp  fonction_discret.hpp  fonction_obj.hpp  optimisation_algo.hpp
sources/: CMakeLists.txt  Data.cpp  MCMC.cpp  Nomad_file.cpp  Parametres.cpp  Stats.cpp  fonction_discret.cpp  fonction_obj.cpp  optimisation_algo.cpp
temp/: output_0.csv  output_1.csv  output_10.csv  output_11.csv  output_12.csv  output_13.csv  output_14.csv  output_15.csv  output_16.csv  output_17.csv  output_18.csv  output_19.csv  output_2.csv  output_20.csv  output_21.csv  output_22.csv  output_23.csv  output_24.csv  output_25.csv  output_26.csv  output_27.csv  output_28.csv  output_29.csv  output_3.csv  output_30.csv  output_31.csv  output_32.csv  output_33.csv  output_34.csv  output_35.csv  output_36.csv  output_37.csv  output_38.csv  output_39.csv  output_4.csv  output_40.csv  output_41.csv  output_42.csv  output_43.csv  output_44.csv  (+60 more)
visu/: MCMC_visu.py  MCMC_visu_1 copy.ipynb  MCMC_visu_1.ipynb  MCMC_visu_2.ipynb  MCMC_visu_4 copy.ipynb  MCMC_visu_4.ipynb  MCMC_visu_8 copy.ipynb  MCMC_visu_8.ipynb  test.py
(+16 files in other folders)
